Fix vertical text alignment in .leading-bar

--- a/assets/css/wikinotes.less
+++ b/assets/css/wikinotes.less
@@ -82,7 +82,7 @@ section {
 	h6, p {
 		line-height: 18px;
 		text-align: center;
-		padding-bottom: 9px;
+		padding-bottom: 15px;
 		color: #333;
 	}
 	h6 { color: #888; }
